Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-11736

LOAD DATA statement with Ozone data can not load data from different bucket

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 4.2.0
    • Impala 4.3.0
    • Frontend

    Description

      Attempt to load data from one bucket into a table stored in another bucket and you get an error:

      $ ozone sh bucket create impala/tmp
      $ ozone sh bucket create impala/foo
      $ ozone fs -cp /impala/test-warehouse/tpch.nation/nation.tbl /impala/tmp
      $ impala-shell
      > create table nation like tpch.nation location 'ofs://localhost:9862/impala/foo/nation';
      Query: create table nation like tpch.nation location 'ofs://localhost:9862/impala/foo/nation'
      +-------------------------+
      | summary                 |
      +-------------------------+
      | Table has been created. |
      +-------------------------+
      Fetched 1 row(s) in 0.14s
      > load data inpath 'ofs://localhost:9862/impala/tmp/nation.tbl' into table nation;
      Query: load data inpath 'ofs://localhost:9862/impala/tmp/nation.tbl' into table nation
      ERROR: IOException: Cannot rename a key to a different bucket
      

      Attachments

        Issue Links

          Activity

            People

              MikaelSmith Michael Smith
              MikaelSmith Michael Smith
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: